<resources>
    <string name="app_name">Videooo</string>

    <!-- Login Screen -->
    <string name="login_screen_login_hint">Login</string>
    <string name="login_screen_password_hint">Password</string>
    <string name="login_screen_sign_in_button_text">Sign in</string>
    <string name="login_screen_sign_in_website_button_text">Sign in via TMDb website</string>
    <string name="login_screen_register_button_text">Register</string>
    <string name="login_screen_guest_button_text">Guest</string>

</resources>
