<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout"
    tools:showIn="@layout/activity_login">

    <TextView
        android:id="@+id/auth_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/ic_movie_filter"
        android:fontFamily="@font/boris_black_bloxx"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="@dimen/login_screen_title_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/authLoginInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_screen_login_layout_margin_top"
        android:background="@android:color/white"
        android:padding="@dimen/login_screen_login_layout_padding"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/auth_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/auth_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="@dimen/login_screen_login_field_drawable_padding"
            android:hint="@string/login_screen_login_hint"
            android:imeOptions="flagNoExtractUi"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/authPasswordInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_screen_password_layout_margin_top"
        android:background="@android:color/white"
        android:padding="@dimen/login_screen_password_layout_padding"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/authLoginInput"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/auth_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_key"
            android:drawablePadding="@dimen/login_screen_password_field_drawable_padding"
            android:hint="@string/login_screen_password_hint"
            android:imeOptions="flagNoExtractUi"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/authSignInButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_screen_sign_in_button_margin_top"
        android:text="@string/login_screen_sign_in_button_text"
        android:textColor="@android:color/white"
        app:backgroundTint="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/authPasswordInput" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/authSignInWebsiteButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_screen_sign_in_button_margin_top"
        android:text="@string/login_screen_sign_in_website_button_text"
        android:textColor="@android:color/white"
        app:backgroundTint="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/authSignInButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/authRegisterButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_screen_sign_in_button_margin_top"
        android:text="@string/login_screen_register_button_text"
        android:textColor="@android:color/black"
        app:backgroundTint="@color/colorAccentLight"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/authSignInWebsiteButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/authGuestButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_screen_guest_button_margin_top"
        android:text="@string/login_screen_guest_button_text"
        app:backgroundTint="@color/colorPrimaryLight"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/authRegisterButton" />
</merge>
