<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.wisnia.videooo.login.presentation.LoginViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_margin">

            <TextView
                android:id="@+id/auth_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_movie_filter"
                android:fontFamily="@font/boris_black_bloxx"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="@dimen/login_screen_title_text_size"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/authLoginInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_screen_login_layout_margin_top"
                android:background="@android:color/white"
                android:padding="@dimen/login_screen_login_layout_padding"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/auth_title">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/auth_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/login_screen_login_field_drawable_padding"
                    android:drawableStart="@drawable/ic_person"
                    android:hint="@string/login_screen_login_hint"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="text"
                    android:text="@={viewModel.login}" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/authPasswordInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_screen_password_layout_margin_top"
                android:background="@android:color/white"
                android:padding="@dimen/login_screen_password_layout_padding"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/authLoginInput"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/auth_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/login_screen_password_field_drawable_padding"
                    android:drawableStart="@drawable/ic_key"
                    android:hint="@string/login_screen_password_hint"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="textPassword"
                    android:text="@={viewModel.password}" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/authSignInButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_screen_sign_in_button_margin_top"
                android:onClick="@{() -> viewModel.signIn()}"
                android:text="@string/login_screen_sign_in_button_text"
                android:textColor="@android:color/white"
                app:backgroundTint="@color/colorAccent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/authPasswordInput" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/authSignInWebsiteButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_screen_sign_in_button_margin_top"
                android:onClick="@{() -> viewModel.signInWebsite()}"
                android:text="@string/login_screen_sign_in_website_button_text"
                android:textColor="@android:color/white"
                app:backgroundTint="@color/colorAccent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/authSignInButton" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/authRegisterButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_screen_sign_in_button_margin_top"
                android:text="@string/login_screen_register_button_text"
                android:textColor="@android:color/black"
                app:backgroundTint="@color/colorAccentLight"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/authSignInWebsiteButton" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/authGuestButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_screen_guest_button_margin_top"
                android:text="@string/login_screen_guest_button_text"
                android:onClick="@{() -> viewModel.signInAsGuest()}"
                app:backgroundTint="@color/colorPrimaryLight"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/authRegisterButton" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>